<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:id="@+id/ly1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginBottom="10dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageprofile"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/Image"
                android:src="@drawable/dwiyan" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            android:layout_height="wrap_content"
                            android:text="@string/lableNama"
                            tools:ignore="NestedWeights" />
                        <TextView
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="@string/titik2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/nama_mahasiswa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/nama"
                            android:textSize="12sp"/>

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            android:layout_height="wrap_content"
                            android:text="@string/lableNIM"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="@string/titik2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/nim_mahasiswa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/nim"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView_Main_Gambar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/Image"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ngobar" />

        <TextView
            android:id="@+id/textView_Main_Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold"/>


        <TextView
            android:textColor="@color/red"
            android:id="@+id/textView_Main_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Ngobar"/>

        <Button
            android:id="@+id/button_Main_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_background_button"
            android:text="@string/submit"
            android:textAllCaps="false" />

    </LinearLayout>


</LinearLayout>